gccida/g3/find_split_point
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3401:6: error: use of undeclared identifier 'single_use'; did you mean 'single_set_2'?
rtx *single_use; // rax 
     ^~~~~~~~~~
     single_set_2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/rtl.h:1470:12: note: 'single_set_2' declared here
extern rtx single_set_2                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3401:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx (rtx, rtx)' (aka 'struct rtx_def *(struct rtx_def *, struct rtx_def *)'))
rtx *single_use; // rax 
~~~ ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3402:4: error: expected ';' after expression
rtx v36; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3402:5: error: use of undeclared identifier 'v36'
rtx v36; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3414:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v48; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3424:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3433:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v67; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3445:4: error: expected ';' after expression
rtx v79; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3445:5: error: use of undeclared identifier 'v79'
rtx v79; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3446:4: error: expected ';' after expression
rtx v80; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3446:5: error: use of undeclared identifier 'v80'
rtx v80; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3456:4: error: expected ';' after expression
rtx v90; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3456:5: error: use of undeclared identifier 'v90'
rtx v90; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3459:4: error: expected ';' after expression
rtx v93; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3459:5: error: use of undeclared identifier 'v93'
rtx v93; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3461:4: error: expected ';' after expression
rtx desta; // [rsp+0h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3461:5: error: use of undeclared identifier 'desta'; did you mean 'dest'?
rtx desta; // [rsp+0h] [rbp-58h] 
    ^~~~~
    dest
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3460:18: note: 'dest' declared here
 struct rtx_def *dest; // [rsp+0h] [rbp-58h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/combine.c:3463:4: error: expected ';' after expression
rtx destc; // [rsp+0h] [rbp-58h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_split_point/src/obj/combine.o] Error 1
